--- a/core/templates/registration/register.html
+++ b/core/templates/registration/register.html
@@ -9,9 +9,14 @@
         <h1>Register a new user</h1>
         <form action="{% url 'register' %}" method="post" accept-charset="utf-8">
             {% csrf_token %}
-            {% if form.errors %}
-            <p>There are errors in the form!</p>
+            {% if messages %}
+            <ul>
+                {% for message in messages %}
+                <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
             {% endif %}
+            <p>There are errors in the form!</p>
 
             {{ form }}
 
