basic view for datamap list

--- a/datamap/templates/datamap/datamap_list.html
+++ b/datamap/templates/datamap/datamap_list.html
@@ -6,6 +6,11 @@
         <title>Datamap_list</title>
     </head>
     <body>
-        body
+        <h1>Datamaps</h1>
+        <ul>
+            {% for datamap in object_list %}
+            <li>{{ datamap.name }}</li>
+            {% endfor %}
+        </ul>
     </body>
 </html>
