gone back to function based views for datamap

--- a/datamap/templates/datamap/datamap_list.html
+++ b/datamap/templates/datamap/datamap_list.html
@@ -10,7 +10,7 @@
         <ul>
             {% if object_list %}
                 {% for datamap in object_list %}
-                <li>{{ datamap.name }}</li>
+                <li><a href="{% url 'datamap' datamap.id %}"> {{ datamap.name }}</a></li>
                 {% endfor %}
             {% else %}
                 <p>There are no datamaps.</p>
