working on uploads form

--- a/datamap/templates/datamap/upload_datamap.html
+++ b/datamap/templates/datamap/upload_datamap.html
@@ -6,6 +6,13 @@
         <title>Upload datamap</title>
     </head>
     <body>
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
         <form action="/uploaddatamap/" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <p>{{ form.file_name }}</p>
