option to clear table before dm upload - but messy code...

--- a/datamap/templates/datamap/upload_datamap.html
+++ b/datamap/templates/datamap/upload_datamap.html
@@ -18,6 +18,7 @@
             <p>{{ form.file_name }}</p>
             <p>{{ form.target_datamap }}</p>
             <p>{{ form.uploaded_file }}</p>
+            <p>Replace all entries: {{ form.replace_all_entries }}</p>
             <input type="submit" value="Create" name="submit-new-dm" id="submit-new-dm"/>
         </form>
     </body>
