moving csv header naming to django settings

--- a/datamap/templates/datamap/upload_datamap.html
+++ b/datamap/templates/datamap/upload_datamap.html
@@ -6,6 +6,7 @@
         <title>Upload datamap</title>
     </head>
     <body>
+        <p id='csv-field-advisory'>Please ensure your csv file has headers: {{ field_keys }}</p>
         {% if messages %}
         <ul>
             {% for message in messages %}
