--- a/datamap/templates/datamap/datamap.html
+++ b/datamap/templates/datamap/datamap.html
@@ -6,7 +6,7 @@
         <title>Datamap Detail</title>
     </head>
     <body>
-        <h1 id="show-datamap-table">Datamap: </h1>
+        <h1 id="show-datamap-table">Datamap: {{ dm_name }} </h1>
         <table>
             <tr>
                 <td>Key</td>
