added a link to create datamap from datamap list page

--- a/datamap/templates/datamap/datamap_list.html
+++ b/datamap/templates/datamap/datamap_list.html
@@ -16,5 +16,6 @@
                 <p>There are no datamaps.</p>
             {% endif %}
         </ul>
+        <p><a href="{% url 'createdatamap' %}">Create a new datamap</a></p>
     </body>
 </html>
