added some very basic templating and a new fixture

--- a/core/templates/registration/logged_out.html
+++ b/core/templates/registration/logged_out.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width" />
-        <title>dbasik logged out</title>
-    </head>
-    <body>
+{% extends "core/base.html" %}
+
+{% block title %}Logged out{% endblock %}
+
+{% block content %}
+
            <p>You've logged out. Bye.</p>
-        </form>
-    </body>
-</html>
+
+{% endblock %}
