--- a/datamap/templates/datamap/create_datamap.html
+++ b/datamap/templates/datamap/create_datamap.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width" />
-        <title>Create datamap</title>
-    </head>
-    <body>
+{% extends "core/base.html" %}
+
+{% block title %}Create datamap{% endblock %}
+
+{% block content %}
         <form action="/createdatamap/" method="post" accept-charset="utf-8">
             {% csrf_token %}
             {{ form.as_p }}
@@ -18,5 +15,4 @@
         </ul>
     {% endfor %}
 
-    </body>
-</html>
+{% endblock %}
