--- a/core/templates/registration/register.html
+++ b/core/templates/registration/register.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width" />
-        <title>Register new user</title>
-    </head>
-    <body>
+{% extends "core/base.html" %}
+
+{% block title %}Register new user{% endblock %}
+
+{% block content %}
         <h1>Register a new user</h1>
         <form action="{% url 'register' %}" method="post" accept-charset="utf-8">
             {% csrf_token %}
@@ -21,5 +18,5 @@
             <input type="submit" name="submit" id="submit" value="Register" />
 
         </form>
-    </body>
-</html>
+
+{% endblock %}
