--- a/datamap/templates/datamap/datamap.html
+++ b/datamap/templates/datamap/datamap.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width" />
-        <title>Datamap Detail</title>
-    </head>
-    <body>
+{% extends "core/base.html" %}
+
+{% block title %}{{ dm_name }}{% endblock %}
+
+{% block content %}
         <h1 id="show-datamap-table">Datamap: {{ dm_name }} </h1>
         <table>
             <tr>
@@ -24,5 +21,5 @@
         <p id='delete-datamap-button'>
             <a href="{% url 'delete-datamap' dm.id %}">Delete this datamap</a>
         </p>
-    </body>
-</html>
+
+{% endblock %}
