--- a/datamap/templates/datamap/upload_datamap.html
+++ b/datamap/templates/datamap/upload_datamap.html
@@ -1,38 +1,34 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width" />
-        <title>Upload datamap</title>
-    </head>
-    <body>
-        <p id='csv-field-advisory'>Please ensure your csv file has headers: {{ field_keys }}</p>
-        {% if messages %}
-        <ul>
-            {% for message in messages %}
-            <li id='message-test'>{{ message }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-        <form action="/uploaddatamap/" method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            <table id='form-table' border='1px'>
-                <tr>
-                    <td>Title of file:</td>
-                    <td>{{ form.file_name }}</td>
-                </tr>
-                <tr>
-                    <td>Select datamap:</td>
-                    <td>{{ form.target_datamap }}</td>
-                </tr>
-                <tr>
-                    <td>{{ form.uploaded_file }}</td>
-                </tr>
-                <tr>
-                    <td>Replace all entries: {{ form.replace_all_entries }}</td>
-                    <td><input id='upload-button' type="submit" value="Create" name="submit-new-dm" id="submit-new-dm"/></td>
-                </tr>
-            </table>
-        </form>
-    </body>
-</html>
+{% extends "core/base.html" %}
+
+{% block title %}Upload datamap{% endblock %}
+
+{% block content %}
+    <p id='csv-field-advisory'>Please ensure your csv file has headers: {{ field_keys }}</p>
+    {% if messages %}
+    <ul>
+        {% for message in messages %}
+        <li id='message-test'>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    <form action="/uploaddatamap/" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <table id='form-table' border='1px'>
+            <tr>
+                <td>Title of file:</td>
+                <td>{{ form.file_name }}</td>
+            </tr>
+            <tr>
+                <td>Select datamap:</td>
+                <td>{{ form.target_datamap }}</td>
+            </tr>
+            <tr>
+                <td>{{ form.uploaded_file }}</td>
+            </tr>
+            <tr>
+                <td>Replace all entries: {{ form.replace_all_entries }}</td>
+                <td><input id='upload-button' type="submit" value="Create" name="submit-new-dm" id="submit-new-dm"/></td>
+            </tr>
+        </table>
+    </form>
+{% endblock %}
