BROKEN - but partially moved towards slug urls for datamap

--- a/datamap/templates/datamap/datamap.html
+++ b/datamap/templates/datamap/datamap.html
@@ -19,7 +19,7 @@
             {% endfor %}
         </table>
         <p id='delete-datamap-button'>
-            <a href="{% url 'delete-datamap' dm.id %}">Delete this datamap</a>
+            <a href="{% url 'delete-datamap' dm.slug %}">Delete this datamap</a>
         </p>
 
 {% endblock %}
