passing tests - reconfigured datamap urls into better CRUD pattern

--- a/datamap/templates/datamap/upload_datamap.html
+++ b/datamap/templates/datamap/upload_datamap.html
@@ -11,7 +11,7 @@
         {% endfor %}
     </ul>
     {% endif %}
-    <form action="/uploaddatamap/" method="post" enctype="multipart/form-data">
+    <form action="/datamaps/uploaddatamap/" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <table id='form-table' border='1px'>
             <tr>
