--- a/datamap/templates/datamap/create_datamap.html
+++ b/datamap/templates/datamap/create_datamap.html
@@ -11,7 +11,7 @@
         {% endfor %}
     </ul>
     {% endif %}
-        <form action="/createdatamap/" method="post" accept-charset="utf-8">
+        <form action="/datamaps/create/" method="post" accept-charset="utf-8">
             {% csrf_token %}
             {{ form.as_p }}
             <input type="submit" value="Create" name="submit-new-dm" id="submit-new-dm"/>
