--- a/datamap/templates/datamap/create_datamapline.html
+++ b/datamap/templates/datamap/create_datamapline.html
@@ -4,7 +4,7 @@
 
 {% block content %}
         <h1 id="create-datamapline">Create datamapline</h1>
-        <form action="/create-datamapline/{{ slug }}" method="post" accept-charset="utf-8">
+        <form action="/datamaps/create-datamapline/{{ slug }}/" method="post" accept-charset="utf-8">
             {% csrf_token %}
             {{ form.as_table }} 
             <td><input id='submit-button' type="submit" value="Submit" name="submit-edited_dml" id="submit-edited-dml"/></td>
