--- a/datamap/templates/datamap/edit_datamapline.html
+++ b/datamap/templates/datamap/edit_datamapline.html
@@ -4,7 +4,7 @@
 
 {% block content %}
         <h1 id="datamapline-update">Edit datamapline</h1>
-        <form action="/edit-datamapline/{{ dml_pk }}" method="post" accept-charset="utf-8">
+        <form action="/datamaps/edit-datamapline/{{ dml_pk }}/" method="post" accept-charset="utf-8">
             {% csrf_token %}
             {{ form.as_table }} 
             <td><input id='submit-button' type="submit" value="Submit" name="submit-edited_dml" id="submit-edited-dml"/></td>
