added test for adding a single datamapline

--- a/datamap/templates/datamap/create_datamapline.html
+++ b/datamap/templates/datamap/create_datamapline.html
@@ -7,7 +7,7 @@
         <form action="/datamaps/create-datamapline/{{ slug }}/" method="post" accept-charset="utf-8">
             {% csrf_token %}
             {{ form.as_table }} 
-            <td><input id='submit-button' type="submit" value="Submit" name="submit-edited_dml" id="submit-edited-dml"/></td>
+            <td><input id='submit-new-dml' type="submit" value="Submit" name="submit-new-dml" id="submit-edited-dml"/></td>
         </form>
 
 {% endblock %}
