--- a/register/templates/register/projecttype_detail.html
+++ b/register/templates/register/projecttype_detail.html
@@ -1,6 +1,6 @@
 {% extends "core/base.html" %}
 
-{% block title %}{{ dm_name }}{% endblock %}
+{% block title %}{{ object.name }}{% endblock %}
 
 {% block content %}
 
