--- a/register/templates/register/projecttype_list.html
+++ b/register/templates/register/projecttype_list.html
@@ -1,6 +1,6 @@
 {% extends "core/base.html" %}
 
-{% block title %}{{ dm_name }}{% endblock %}
+{% block title %}List of Project Types{% endblock %}
 
 {% block content %}
     <ul>
