--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -1,30 +1,36 @@
 {% extends "core/base.html" %}
+{% load staticfiles %}
 
-{% block title %}Log in{% endblock %}
+{% block title %}dbasik | Log in{% endblock %}
+
+{% block extra_head_tags %}
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="{% static 'css/signin.css' %}" type="text/css">
+{% endblock %}
+
+{% block body_class %}text-center{% endblock %}
+
+{% block bootstrap-navbar %}{% endblock %}
 
 {% block content %}
 
-    <h1>Log-in</h1>
-
     {% if form.errors %}
         <p>Your username and password did't match. Please try again.</p>
-    {% else %}
-       <p>Please use the following form to log-in:</p> 
     {% endif %}
 
     {% if next %}
     <p>You can't access that page!</p>
     {% endif %}
 
-    <form action="{% url 'login' %}" method="post" accept-charset="utf-8">
+    <form class="form-signin" action="{% url 'login' %}" method="post" accept-charset="utf-8">
         {% csrf_token %} 
-
+        <h1 class="h3 mb-3 font-weight-normal">Please sign in:</h1>
         <p>Username: {{ form.username }}</p>
         <p>Password: {{ form.password }}</p>
 
-        <p><input type="submit" value="login" name="" id=""/></p>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
         <input type="hidden" value="{{ next }}" name="next" id="next"/>
-        
+    <p class="mt-5 mb-3 text-muted">&copy; 2018-2019</p>
     </form>
 
 {% endblock %}
