--- a/datamap/templates/datamap/upload_datamap.html
+++ b/datamap/templates/datamap/upload_datamap.html
@@ -7,7 +7,9 @@
     {% if messages %}
     <ul>
         {% for message in messages %}
-        <li id='message-test'>{{ message }}</li>
+        <div class="alert alert-dismissible alert-danger">
+            <li id='message-test'>{{ message }}</li>
+        </div>
         {% endfor %}
     </ul>
     {% endif %}
