--- a/datamap/templates/datamap/create_datamap.html
+++ b/datamap/templates/datamap/create_datamap.html
@@ -3,24 +3,38 @@
 {% block title %}Create datamap{% endblock %}
 
 {% block content %}
-<p id='datamap-integrity-error'>Please ensure your datamap name for this portfolio is unique.</p>
-    {% if messages %}
-    <ul>
-        {% for message in messages %}
-        <li id='message-test'>{{ message }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
-        <form action="/datamaps/create/" method="post" accept-charset="utf-8">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" value="Create" name="submit-new-dm" id="submit-new-dm"/>
-        </form>
-    <h2>Current datamaps in system:</h2>
-    {% for d in dms_l %}
-        <ul id="current-datamap-list">
-            <li><a href="{%  url 'datamaps:datamap-detail' d.slug %}">{{ d.name }}</a></li>
-        </ul>
-    {% endfor %}
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6">
+            <p id='datamap-integrity-error'>Please ensure your datamap name for this portfolio is unique.</p>
+            {% if messages %}
+            <ul>
+                {% for message in messages %}
+                <li id='message-test'>{{ message }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+            <form action="/datamaps/create/" method="post" accept-charset="utf-8">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button class="btn btn-primary" type="submit" value="Create" name="submit-new-dm" id="submit-new-dm"/>Create</button>
+            </form>
+        </div>
 
+        <div class="col-sm-6">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Current datamaps in system</h5>
+                    {% for d in dms_l %}
+                    <ul id="current-datamap-list">
+                        <li class="card-text"><a href="{%  url 'datamaps:datamap-detail' d.slug %}">{{ d.name }}</a></li>
+                    </ul>
+                    {% endfor %}
+                </div> 
+            </div>
+        </div>
+    </div>
+
+</div>
 {% endblock %}
