hardcoded some help text into the template for Project Type list

--- a/datamap/templates/datamap/datamap.html
+++ b/datamap/templates/datamap/datamap.html
@@ -6,7 +6,7 @@
 <div class="container">
     
         <h3 id="show-datamap-table">Datamap: {{ dm_name }} </h3>
-        <div class="container">
+        <div class="buttonHolder">
             <a class="btn btn-danger" href="{% url 'datamaps:delete' dm.slug %}">Delete this datamap</a>
             <a class="btn btn-primary" href="{% url 'datamaps:datamapline-create' dm.slug %}">Add line to this datamap</a>
         </div>
