--- a/register/templates/register/projecttype_create_form.html
+++ b/register/templates/register/projecttype_create_form.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 {% crispy project_type_create_form.helper %}
 
-{% block title %}{{ dm_name }}{% endblock %}
+{% block title %}Create a new Project Type{% endblock %}
 
 {% block content %}
 
