--- a/register/templates/register/projecttype_list.html
+++ b/register/templates/register/projecttype_list.html
@@ -3,11 +3,24 @@
 {% block title %}List of Project Types{% endblock %}
 
 {% block content %}
-    <ul>
-        {% for item in object_list %}
-            <li><a href="{% url "register:projecttype_detail" item.slug %}">{{ item }}</a></li>
-        {% endfor %}
-    </ul>
+<div class="container">
+    <h3>Project Types</h3>
+    <div class="container">
+        <p>This text is hard-coded into the template but should be moved into the database.</p>
+        <p>General description of what a Project Type is and why we need it.</p>
+        <table class="table table-hover">
+            <tr>
+                <th scope="col">Project Type</th>
+            </tr>
+            {% for item in object_list %}
+            <tr><td><a href="{% url "register:projecttype_detail" item.slug %}">{{ item }}</a></td></tr>
+            {% endfor %}
 
+        </table>
+        <div class="buttonHolder">
+            <a class="btn btn-primary" href="{% url 'register:projecttype_create' %}">Create New Project Type</a>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
