--- a/register/templates/register/projecttype_confirm_delete.html
+++ b/register/templates/register/projecttype_confirm_delete.html
@@ -4,11 +4,18 @@
 
 {% block content %}
 
-<form method="post" accept-charset="utf-8">{% csrf_token %}
-    Are you sure you want to delete "{{ object }}"?
-    <input type="submit" value="Submit" name="submit" id="submit-button"/>
-    
-</form>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <form method="post" accept-charset="utf-8">{% csrf_token %}
+                Are you sure you want to delete "{{ object }}"?
+        </div>
+        <div class="col">
+            <button class="btn btn-danger" type="submit" value="Submit" name="submit" id="submit-button"/>Yes</button>
+        </div>
+    </form>
+    </div>    
+</div>
 
 
 {% endblock %}
