added Tier view and templates

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -48,7 +48,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{% url 'register:projecttype_list' %}">Project Types</a>
-                <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="{% url 'register:tier_list' %}">Tiers</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">Something else here</a>
                 </div>
