--- a/datamap/templates/datamap/datamap_list.html
+++ b/datamap/templates/datamap/datamap_list.html
@@ -21,7 +21,7 @@
             {% endif %}
         </table>
         <div class="container">
-            <a class="btn btn-primary" href="{% url 'datamaps:datamap-create' %}">Add line to this datamap</a>
+            <a class="btn btn-primary" href="{% url 'datamaps:datamap-create' %}">Create a datamap</a>
         </div>
     </div>
 
