--- a/register/templates/register/tier_list.html
+++ b/register/templates/register/tier_list.html
@@ -7,7 +7,7 @@
     <h3>Tiers</h3>
     <div class="container">
         <p>This text is hard-coded into the template but should be moved into the database.</p>
-        <p>General description of what a Project Type is and why we need it.</p>
+        <p>General description of what a Tier is and why we need it.</p>
         <table class="table table-hover">
             <tr>
                 <th scope="col">Tier</th>
@@ -18,7 +18,7 @@
 
         </table>
         <div class="buttonHolder">
-            <a class="btn btn-primary" href="{% url 'register:tier_create' %}">Create New Project Type</a>
+            <a class="btn btn-primary" href="{% url 'register:tier_create' %}">Create New Tier</a>
         </div>
     </div>
 </div>
