--- a/datamap/templates/datamap/datamap_update.html
+++ b/datamap/templates/datamap/datamap_update.html
@@ -1,9 +1,9 @@
 {% extends "core/base.html" %}
 
 {% load crispy_forms_tags %}
-{% crispy tier_create_form.helper %}
+{% crispy project_type_create_form.helper %}
 
-{% block title %}Create a new Tier{% endblock %}
+{% block title %}Update Datamap title{% endblock %}
 
 {% block content %}
 
@@ -15,17 +15,18 @@
 
         <div class="col-sm-4">
             <div class="card border-light mb-3" style="width: 18rem;">
-                <div class="card-header">Current Tiers in system</div>
+                <div class="card-header">Current Datamaps in system</div>
                 <div class="card-body">
                     {% if existing_objects %}
                         {% for item in existing_objects %}
-                        <ul id="current-tier-list" class="list-group">
-                            <li class="list-group-item card-text"><a href="{%  url 'register:datamap-detail' item.slug %}">{{ item }}</a></li>
+                        <ul id="current-datamap-list" class="list-group">
+                            <li class="list-group-item card-text"><a href="{%  url 'datamaps:datamap-detail' item.slug %}">{{ item }}</a></li>
                         </ul>
                         {% endfor %}
                     {% else %}
-                       <p>No Datamaps in system.</p>
+                        <p>No Tiers in system.</p>
                     {% endif %}
+
                 </div> 
             </div>
         </div>
