--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -36,7 +36,7 @@
                 Portfolio
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="{% url 'datamaps:datamap-list' %}">Datamaps</a>
+                    <a class="dropdown-item" href="{% url 'datamaps:datamap_list' %}">Datamaps</a>
                 <a class="dropdown-item" href="#">Another action</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">Something else here</a>
