--- a/register/templates/register/tier_create.html
+++ b/register/templates/register/tier_create.html
@@ -20,7 +20,7 @@
                     {% if existing_objects %}
                         {% for item in existing_objects %}
                         <ul id="current-tier-list" class="list-group">
-                            <li class="list-group-item card-text"><a href="{%  url 'register:datamap-detail' item.slug %}">{{ item }}</a></li>
+                            <li class="list-group-item card-text"><a href="{%  url 'register:datamap_detail' item.slug %}">{{ item }}</a></li>
                         </ul>
                         {% endfor %}
                     {% else %}
