--- a/datamap/templates/datamap/datamap_detail.html
+++ b/datamap/templates/datamap/datamap_detail.html
@@ -27,7 +27,7 @@
             </tbody>
         </table>
         <div class="buttonHolder">
-            <a class="btn btn-primary" href="{% url 'datamaps:datamapline-create' %}">Add line to this datamap</a>
+            <a class="btn btn-primary" href="{% url 'datamaps:datamapline-create' dm.slug %}">Add line to this datamap</a>
             <a class="btn btn-primary" href="{% url 'datamaps:datamap_update' dm.slug %}">Edit</a>
             <a class="btn btn-danger" href="{% url 'datamaps:datamap_delete' dm.slug %}">Delete this datamap</a>
         </div>
