--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -49,6 +49,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{% url 'register:projecttype_list' %}">Project Types</a>
                     <a class="dropdown-item" href="{% url 'register:tier_list' %}">Tiers</a>
+                    <a class="dropdown-item" href="{% url 'register:projectstage_list' %}">Project Stages</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">Something else here</a>
                 </div>
