getting there in sorting out datamap upload errors

--- a/datamap/templates/datamap/upload_datamap.html
+++ b/datamap/templates/datamap/upload_datamap.html
@@ -14,7 +14,7 @@
         <ul>
             {% for message in messages %}
             <div class="alert alert-dismissible alert-danger">
-                <li id='message-test'>{{ message }}</li>
+                {{ message }}
             </div>
             {% endfor %}
         </ul>
