--- a/datamap/templates/datamap/upload_datamap.html
+++ b/datamap/templates/datamap/upload_datamap.html
@@ -1,6 +1,6 @@
 {% extends "core/base.html" %}
 {% load crispy_forms_tags %}
-{% crispy upload_datamap.helper %}
+{% crispy form.helper %}
 
 {% block title %}Upload datamap{% endblock %}
 
