--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -50,6 +50,7 @@
                     <a class="dropdown-item" href="{% url 'register:projecttype_list' %}">Project Types</a>
                     <a class="dropdown-item" href="{% url 'register:tier_list' %}">Tiers</a>
                     <a class="dropdown-item" href="{% url 'register:projectstage_list' %}">Project Stages</a>
+                    <a class="dropdown-item" href="{% url 'register:strategicalignment_list' %}">Strategic Alignments</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">Something else here</a>
                 </div>
